<resources>
    <string name="app_name">BananaAlbum</string>
    <string name="hint_search">Search album here</string>
    <string name="btnFav">Favorite</string>
    <string name="btnBin">Bin</string>
    <string name="btnGoogle">Google</string>
    <string name="btnFacebook">Facebook</string>
    <string name="btnSignIn">Sign In</string>
    <string name="btnForgotPassword">Forgot Password?</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="btnRegister">Register</string>
    <string name="btnName">Name</string>
    <string name="home">Home</string>
    <string name="pub">Public</string>
    <string name="cam">Camera</string>
    <string name="setting">Setting</string>
    <string name="grayscale">Grayscale</string>
    <string name="rotateLeft">Rotate Left</string>
    <string name="rotateRight">Rotate Right</string>
    <string name="flip">Flip</string>
    <string name="editAlbum">Edit</string>
    <string name="infoAlbum">Info</string>
    <string name="sendEmail">Send Email</string>
    <string name="clientID">608540510672-lp7rb05rhhnntalosuueof9c6g0trtia.apps.googleusercontent.com</string>
</resources>