<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/grayscale"
        android:icon="@drawable/ic_baseline_gray"
        android:title="@string/grayscale" />
    <item
        android:id="@+id/flip"
        android:icon="@drawable/ic_baseline_photo_album"
        android:title="@string/flip" />
    <item
        android:id="@+id/placeholder1"
        android:enabled="false"
        android:title="" />
    <item
        android:id="@+id/rotateLeft"
        android:icon="@drawable/ic_baseline_rotate_left"
        android:title="@string/rotateLeft"/>

    <item
        android:id="@+id/rotateRight"
        android:icon="@drawable/ic_baseline_rotate_right"
        android:title="@string/rotateRight"/>


</menu>