<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

>

    <EditText
        android:id="@+id/TextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/custom_edittext_email"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.442" />

    <EditText
        android:id="@+id/TextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_edittext_email"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="14dp"
        app:layout_constraintTop_toBottomOf="@+id/TextEmailAddress"
        tools:layout_editor_absoluteX="43dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="165dp"
        android:layout_height="161dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.521"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/ButtonSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_button_login"
        android:text="@string/btnSignIn"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@+id/TextPassword"
        tools:layout_editor_absoluteX="40dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="or use one of your social profiles"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButtonSignIn" />

    <Button
        android:id="@+id/ButtonGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="8dp"
        android:drawableLeft="@drawable/icon_google"
        android:drawablePadding="5dp"
        android:paddingHorizontal="20dp"
        android:text="@string/btnGoogle"
        android:textSize="16dp"
        android:textColor="@color/grey"
        android:background="@drawable/custom_button_google"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/ButtonSignIn" />

    <Button
        android:id="@+id/ButtonFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="76dp"
        android:drawableLeft="@drawable/icon_facebook"
        android:background="@drawable/custom_button_facebook"
        android:paddingHorizontal="20dp"
        android:text="@string/btnFacebook"
        android:textSize="16dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/ButtonSignIn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="207dp" />

    <TextView
        android:id="@+id/ButtonForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="20dp"
        android:text="@string/btnForgotPassword"
        android:textColor="@color/pink"
        android:textSize="18dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/ButtonSignIn" />

    <TextView
        android:id="@+id/ButtonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="168dp"
        android:text="@string/btnSignUp"
        android:textColor="@color/pink"
        android:textSize="18dp"

        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/ButtonSignIn" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="234dp"
        android:layout_height="116dp"
        app:layout_constraintBottom_toTopOf="@+id/TextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.891"
        app:srcCompat="@drawable/appname" />

</androidx.constraintlayout.widget.ConstraintLayout>